--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -3,6 +3,15 @@
     border: 1px solid black;
     border-collapse: collapse;
     width: 75%;
+    
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+
+.table-header-row {
+    background-color: #dddddd;
 }
 
 .admin-table th,td,tr {
