--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -26,7 +26,7 @@ h4 {
   margin: 150px auto 75px auto;
   border: 15px blue solid;
   width: 25%;
-  height: 200px;
+  height: 20%;
   padding: 20px;
   border-radius: 100px 50px;;
 }
